# ASPathLens

./: .gitattributes  .gitignore  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  render.yaml  vercel.json
.github/workflows/: deploy-frontend.yml  update-data.yml
api/: index.py
backend/: pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: config.py  main.py  models.py  state.py
backend/app/api/: analysis_api.py  asn_api.py  batch_api.py  dataset_api.py  dataset_diff_api.py  kg_api.py  path_api.py
backend/app/cli/: main.py
backend/app/db/: database.py  schema.sql
backend/app/sdk/: __init__.py  analyzer.py
backend/app/services/: as2org_loader.py  asrank_client.py  asrel_loader.py  batch_analyzer.py  dataset_diff.py  dataset_status.py  kg_builder.py  kg_exporter.py  kg_query.py  leaker_localization.py  org_analyzer.py  path_analyzer.py  path_diff.py  path_normalizer.py  pattern_search.py  repair_hint.py  report_exporter.py  risk_score.py  route_leak_patterns.py  update_manager.py  valley_free.py
backend/data/raw/as_relationship/: 20260601.as-rel2.txt.bz2
backend/scripts/: caida_release.py  download_as2org.py  download_asrel.py  parse_as2org.py  parse_asrel.py  update_all.py
backend/tests/: test_core.py  test_kg.py  test_phase2.py
docs/: DEPLOYMENT.md  make_screenshots.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: DatasetStatusCard.jsx  ExampleCard.jsx  (+4 more)
(+14 files in other folders)
